new codes addition

--- a/pages/email.html
+++ b/pages/email.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/my_hairlify/css/email.css">
+    <link rel="stylesheet" href="/css/email.css">
     <title>Email  Verification</title>
 </head>
 <body>
@@ -24,7 +24,7 @@
              we’ll send you an OTP verification <br>
              code.
         </p>
-        <img src="/my_hairlify/images/lock4.png" alt="">
+        <img src="/images/lock4.png" alt="">
     </div>
    </div>
 </body>
