--- a/pages/exclusive.html
+++ b/pages/exclusive.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/my_hairlify/css/exclusive.css">
+    <link rel="stylesheet" href="/css/exclusive.css">
     <script
             src="https://kit.fontawesome.com/3bf6e17bc2.js"
             crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
      <header class="first">
         <div class="head">
             <div class="image">
-                <img src="/my_hairlify/images/logo2.jpg" alt="">
+                <img src="/images/logo2.jpg" alt="">
             </div>
             <div class="hairlify">
                 <h1>
@@ -73,7 +73,7 @@
         <div class="session">
             <div class="second-session">
                 <div class="picture">
-                    <img src="/my_hairlify/images//A1.jpg" alt="">
+                    <img src="/images//A1.jpg" alt="">
                 </div>
                 <h4>100% Vietnam Brazilian 13x4 <br> HD Lace Frontal
                     Human Hair <br> Wigs 13x6 Body Wave Lace.</h4>
@@ -85,7 +85,7 @@
             </div>
             <div class="second-session">
                 <div class="picture">
-                    <img src="/my_hairlify/images/a2.jpg" alt="">
+                    <img src="/images/a2.jpg" alt="">
                 </div>
                 <h4>
                     Bone Straight Double Drawn <br> Human Hair Wig 220% 
@@ -99,7 +99,7 @@
             </div>
             <div class="second-session">
                 <div class="picture">
-                    <img src="/my_hairlify/images/a3.jpg" alt="">
+                    <img src="/images/a3.jpg" alt="">
                 </div>
                 <h4>
                     100% Vietnames Hair Bouncy Curly <br> Lace Front Wigs Pre Plucke
@@ -113,7 +113,7 @@
             </div>
             <div class="second-session" id="connect">
                 <div class="picture">
-                    <img src="/my_hairlify/images/a4.jpg" alt="">
+                    <img src="/images/a4.jpg" alt="">
                 </div>
                 <h4>
                     Human Hair Wigs Gluless Lace Front SDD 
@@ -127,7 +127,7 @@
             </div>
             <div class="second-session">
                 <div class="picture">
-                    <img src="/my_hairlify/images/a5.jpg" alt="">
+                    <img src="/images/a5.jpg" alt="">
                 </div>
                 <h4>
                     Fringe Human Hair Glueless Wigs Super <br>
@@ -142,7 +142,7 @@
             </div>
             <div class="second-session" id="six">
                 <div class="picture">
-                    <img src="/my_hairlify/images/a6.jpg" alt="">
+                    <img src="/images/a6.jpg" alt="">
                 </div>
                 <h4>
                     180% Density Vietname Super Double <br> Drawn Bone Straight 
@@ -156,7 +156,7 @@
             </div>
             <div class="second-session" id="seven">
                 <div class="picture">
-                    <img src="/my_hairlify/images/a7.jpg" alt="">
+                    <img src="/images/a7.jpg" alt="">
                 </div>
                 <h4>
                     Vietname Super Double Drawn Bone <br> Straight 2x6 Bob With 
@@ -170,7 +170,7 @@
             </div>
             <div class="second-session">
                 <div class="picture">
-                    <img src="/my_hairlify/images/a8.jpg" alt="">
+                    <img src="/images/a8.jpg" alt="">
                 </div>
                 <h4>
                     100% Virgin/ Raw Human Hair Vietnames <br>
@@ -186,7 +186,7 @@
         <div class="session">
             <div class="second-session">
                 <div class="picture">
-                    <img src="/my_hairlify/images/a9.jpg" alt="">
+                    <img src="/images/a9.jpg" alt="">
                 </div>
                 <h4>
                      210% Density Vietname Double Drawn <br>
@@ -201,7 +201,7 @@
             </div>
             <div class="second-session">
                 <div class="picture">
-                    <img src="/my_hairlify/images/a10.jpg" alt="">
+                    <img src="/images/a10.jpg" alt="">
                 </div>
                 <h4>
                     250% Density Vietnam Bone Straight <br> Super Double Drawn Wig 
@@ -215,7 +215,7 @@
             </div>
             <div class="second-session" id="first">
                 <div class="picture">
-                    <img src="/my_hairlify/images/a11.jpg" alt="">
+                    <img src="/images/a11.jpg" alt="">
                 </div>
                 <h4>
                     Raw Vietnamese Single <br> Drawn Unprocessed 
@@ -229,7 +229,7 @@
             </div>
             <div class="second-session">
                 <div class="picture">
-                    <img src="/my_hairlify/images/a12.jpg" id="action" alt="">
+                    <img src="/images/a12.jpg" id="action" alt="">
                 </div>
                 <h4>
                     100% Human Hair Super Double <br> Drawn Bouncy Body Wave <br> Vietnamese Hair
@@ -243,7 +243,7 @@
             </div>
             <div class="second-session">
                 <div class="picture">
-                    <img src="/my_hairlify/images/a13.jpg" alt="">
+                    <img src="/images/a13.jpg" alt="">
                 </div>
                 <h4>
                     360LaceFrontal Wig Vietnam Bone <br> Straight Raw Hair 
@@ -257,7 +257,7 @@
             </div>
             <div class="second-session">
                 <div class="picture">
-                    <img src="/my_hairlify/images/a14.jpg" alt="">
+                    <img src="/images/a14.jpg" alt="">
                 </div>
                 <h4>
                     210% Density Vietname Double Drawn <br> Human Hair 12A 
@@ -271,7 +271,7 @@
             </div>
             <div class="second-session">
                <div class="picture">
-                    <img src="/my_hairlify/images/a15.jpg" id="action" alt="">
+                    <img src="/images/a15.jpg" id="action" alt="">
                 </div>
                 <h4>
                     Orange Bone Straight Paired With <br> 5x5Closure Lace Vietnam 100% 
@@ -285,7 +285,7 @@
             </div>
             <div class="second-session">
                 <div class="picture">
-                    <img src="/my_hairlify/images/a16.jpg" id="action" alt="">
+                    <img src="/images/a16.jpg" id="action" alt="">
                 </div>
                 <div class="height">
                     <h4>
@@ -316,7 +316,7 @@
         <div class="asset">
             <div class="first-product">
                 <div class="pictures">
-                    <img src="/my_hairlify/images/b1.jpeg" alt="">
+                    <img src="/images/b1.jpeg" alt="">
                 </div>
                 <h4>
                     20 Inch Body Wave HD Lace Glueless <br>
@@ -330,7 +330,7 @@
             </div>
             <div class="first-product">
                 <div class="pictures">
-                    <img src="/my_hairlify/images/b2.jpeg" alt="">
+                    <img src="/images/b2.jpeg" alt="">
                 </div>
                 <h4>
                     Glueless Bob Wigs Human Hair Wear <br>
@@ -345,7 +345,7 @@
             </div>
             <div class="first-product">
                 <div class="pictures">
-                    <img src="/my_hairlify/images/b3.jpeg" alt="">
+                    <img src="/images/b3.jpeg" alt="">
                 </div>
                 <h4>
                     Highlight Wig 100% <br>
@@ -362,7 +362,7 @@
            
                 <div class="first-product">
                     <div class="pictures">
-                        <img src="/my_hairlify/images/b4.jpeg" alt="">
+                        <img src="/images/b4.jpeg" alt="">
                     </div>
                     <h4>
                         13x6 Lace Front Wigs Straight Virgin Human <br> Hair With Pre-plucked Hair Line 180% Density.
@@ -375,7 +375,7 @@
                 </div>
                 <div class="first-product">
                     <div class="pictures">
-                        <img src="/my_hairlify/images/b5.jpeg" alt="">
+                        <img src="/images/b5.jpeg" alt="">
                     </div>
                     <h4>
                         Thick Natural French Curl/Loose <br> Wave Braids Pre-Streched <br> Hair Extensions.
@@ -388,7 +388,7 @@
                 </div>
                 <div class="first-product">
                     <div class="pictures">
-                        <img src="/my_hairlify/images/b6.jpeg" alt="">
+                        <img src="/images/b6.jpeg" alt="">
                     </div>
                     <h4>
                         Wear And Go Glueless Wigs Human Hair Kinky <br> Straight Lace Front Wigs 4x4 HD Closure <br>Yaki Straight Wigs.
@@ -408,7 +408,7 @@
         <div class="help">
            <div class="order">
                <div class="order-1">
-                   <img src="/my_hairlify/images/logo2.jpg" alt="">
+                   <img src="/images/logo2.jpg" alt="">
                    <div class="order-2">
                        <h3>
                            MyHairlify
