--- a/pages/silver.html
+++ b/pages/silver.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/my_hairlify/css/plantinum.css">
+    <link rel="stylesheet" href="/css/plantinum.css">
     <script
             src="https://kit.fontawesome.com/3bf6e17bc2.js"
             crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
      <header class="first">
         <div class="head">
             <div class="image">
-                <img src="/my_hairlify/images/logo2.jpg" alt="">
+                <img src="/images/logo2.jpg" alt="">
             </div>
             <div class="hairlify">
                 <h1>
@@ -77,7 +77,7 @@
         <div class="main-products">
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h1.jpeg" alt="">
+                    <img src="/images/h1.jpeg" alt="">
                 </div>
                 <h4>
                     Real HD Lace Closure Deep Part 2x6 9x6 HD <br>
@@ -91,7 +91,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h2.jpeg" alt="">
+                    <img src="/images/h2.jpeg" alt="">
                 </div>
                 <h4>
                     13x4 Frontal Body Wave Transparent Lace <br>
@@ -105,7 +105,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h3.jpeg" alt="">
+                    <img src="/images/h3.jpeg" alt="">
                 </div>
                 <h4>
                     4x4 HD Lace Closure Straight Closure Human <br>
@@ -120,7 +120,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h4.jpeg" alt="">
+                    <img src="/images/h4.jpeg" alt="">
                 </div>
                 <h4>
                     Brazilian 2x6 Lace Closure Straight Brazilian <br> Human 
@@ -135,7 +135,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h5.jpeg" alt="">
+                    <img src="/images/h5.jpeg" alt="">
                 </div>
                 <h4>
                     5x5 Transparent HD Lace Closure Only Body <br>
@@ -150,7 +150,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h6.jpeg" alt="">
+                    <img src="/images/h6.jpeg" alt="">
                 </div>
                 <h4>
                     Water Wave 4x4 Lace Closure With <br>
@@ -165,7 +165,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h7.jpeg" alt="">
+                    <img src="/images/h7.jpeg" alt="">
                 </div>
                 <h4>
                     5x5 HD Lace Closure Tiny Single Knot Ultra Thin <br>
@@ -182,7 +182,7 @@
         <div class="main-products">
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h1b.jpeg" alt="">
+                    <img src="/images/h1b.jpeg" alt="">
                 </div>
                 <h4>
                     5x5 Closure HD Transparent Lace Closure <br>
@@ -196,7 +196,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h2b.jpeg" alt="">
+                    <img src="/images/h2b.jpeg" alt="">
                 </div>
                 <h4>
                     Premium Single Body Wave Closure 4x4 Silk <br>
@@ -210,7 +210,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h3b.jpeg" alt="">
+                    <img src="/images/h3b.jpeg" alt="">
                 </div>
                 <h4>
                     HD Lace Closure, Free Part Real 5x5 HD Lace <br>
@@ -225,7 +225,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h4b.jpeg" alt="">
+                    <img src="/images/h4b.jpeg" alt="">
                 </div>
                 <h4>
                     Raw 1B Silk Based Closure Single <br>
@@ -239,7 +239,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h5b.jpeg" alt="">
+                    <img src="/images/h5b.jpeg" alt="">
                 </div>
                 <h4>
                     HD Lace Closure 6x6 Closure Human Hair <br>
@@ -254,7 +254,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h6b.jpeg" alt="">
+                    <img src="/images/h6b.jpeg" alt="">
                 </div>
                 <h4>
                     Lace Frontal 13x4 Straight HD Lace Frontal <br>
@@ -269,7 +269,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h7b.jpeg" alt="">
+                    <img src="/images/h7b.jpeg" alt="">
                 </div>
                 <h4>
                     13x4 HD Lace Frontal Closure Pre Plucked With <br>
@@ -297,7 +297,7 @@
          <div class="high-recommendation">
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/h8a.jpeg" alt="">
+                    <img src="/images/h8a.jpeg" alt="">
                 </div>
                 <h4>
                     30 Inch Orange Ginger Deep Wave Human <br> Hair Wig 13x4 13x6 HD Lace Curly <br>
@@ -311,7 +311,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/b2.jpeg" alt="">
+                    <img src="/images/b2.jpeg" alt="">
                 </div>
                 <h4>
                     Glueless Bob Wigs Human Hair Wear And <br>
@@ -326,7 +326,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/h9.jpeg" alt="">
+                    <img src="/images/h9.jpeg" alt="">
                 </div>
                 <h4>
                     Straight Human Hair 5x5 HD Lace Closure <br>
@@ -343,7 +343,7 @@
          <div class="high-recommendation">
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/b4.jpeg" alt="">
+                    <img src="/images/b4.jpeg" alt="">
                 </div>
                 <h4>
                     Wear And Go Glueless Wigs Human Hair Kinky <br>
@@ -358,7 +358,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/h8b.jpeg" alt="">
+                    <img src="/images/h8b.jpeg" alt="">
                 </div>
                 <h4>
                     5x5 Real HD Lace Closure Skinlike <br>
@@ -373,7 +373,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/h9b.jpeg" alt="">
+                    <img src="/images/h9b.jpeg" alt="">
                 </div>
                 <h4>
                     30 Inch Orange Ginger Straight <br>
@@ -394,7 +394,7 @@
         <div class="help">
            <div class="order">
                <div class="order-1">
-                   <img src="/my_hairlify/images/logo2.jpg" alt="">
+                   <img src="/images/logo2.jpg" alt="">
                    <div class="order-2">
                        <h3>
                            MyHairlify
