--- a/pages/order.html
+++ b/pages/order.html
@@ -8,7 +8,7 @@
     crossorigin="anonymous"></script>
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/my_hairlify/css/order.css">
+    <link rel="stylesheet" href="/css/order.css">
     <title>Order</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
      <header class="first">
         <div class="head">
             <div class="image">
-                <img src="/my_hairlify/images/logo2.jpg" alt="">
+                <img src="/images/logo2.jpg" alt="">
             </div>
             <div class="hairlify">
                 <h1>
@@ -49,9 +49,9 @@
     </header>
 
     <div class="secure">
-        <img src="/my_hairlify/images/b6.jpeg" alt="">
-        <img src="/my_hairlify/images/2.jpeg" alt="">
-        <img src="/my_hairlify/images/3.jpeg" alt="">
+        <img src="/images/b6.jpeg" alt="">
+        <img src="/images/2.jpeg" alt="">
+        <img src="/images/3.jpeg" alt="">
     </div>
 
     <!-- tax fee -->
@@ -123,10 +123,10 @@
             </div>
         </div>
         <div class="img-hair">
-            <img src="/my_hairlify/images/4.jpeg" alt="">
-            <img src="/my_hairlify/images/5.jpeg" alt="">
-            <img src="/my_hairlify/images/6.jpeg" alt="">
-            <img src="/my_hairlify/images/7.jpeg" alt="">
+            <img src="/images/4.jpeg" alt="">
+            <img src="/images/5.jpeg" alt="">
+            <img src="/images/6.jpeg" alt="">
+            <img src="/images/7.jpeg" alt="">
         </div>
         <div class="faith">
             <h6>faith</h6>
@@ -213,24 +213,24 @@
             </div>
             <div class="connect-1">
                 <div class="connect-3">
-                    <img src="/my_hairlify/images/8.jpeg" alt="">
-                    <img src="/my_hairlify/images/9.jpeg" alt="">
+                    <img src="/images/8.jpeg" alt="">
+                    <img src="/images/9.jpeg" alt="">
                 </div>
                 <div class="connect-3">
-                    <img src="/my_hairlify/images/10.jpeg" alt="">
-                    <img src="/my_hairlify/images/12.jpeg" alt="">
+                    <img src="/images/10.jpeg" alt="">
+                    <img src="/images/12.jpeg" alt="">
                 </div>
                 <div class="connect-3">
-                    <img src="/my_hairlify/images/12.jpeg" alt="">
-                    <img src="/my_hairlify/images/13.jpeg" alt="">
+                    <img src="/images/12.jpeg" alt="">
+                    <img src="/images/13.jpeg" alt="">
                 </div>
                 <div class="connect-3">
-                    <img src="/my_hairlify/images/14.jpeg" alt="">
-                    <img src="/my_hairlify/images/15.jpeg" alt="">
+                    <img src="/images/14.jpeg" alt="">
+                    <img src="/images/15.jpeg" alt="">
                 </div>
                 <div class="connect-3">
-                    <img src="/my_hairlify/images/16.jpeg" alt="">
-                    <img src="/my_hairlify/images/17.jpeg" alt="">
+                    <img src="/images/16.jpeg" alt="">
+                    <img src="/images/17.jpeg" alt="">
                 </div>
             </div>
         </div>
@@ -248,7 +248,7 @@
         <div class="high-recommendation">
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/h23b.jpeg" alt="">
+                    <img src="/images/h23b.jpeg" alt="">
                 </div>
                 <h4>
                     30 Inch Human Hair Wigs 13x6 Body Wave HD <br>
@@ -262,7 +262,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/b14.jpeg" alt="">
+                    <img src="/images/b14.jpeg" alt="">
                 </div>
                 <h4>
                     Bob Wig Human Hair 13x5x1 Glueless <br> Lace Front Wigs Human Hair Pre Plucked.
@@ -275,7 +275,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/c3.jpg" alt="">
+                    <img src="/images/c3.jpg" alt="">
                 </div>
                 <h4>
                     Bone Straight V Part Wigs After Wet Get Deep <br>
@@ -289,7 +289,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/b15.jpeg" alt="">
+                    <img src="/images/b15.jpeg" alt="">
                 </div>
                 <h4>
                     Yaki Straight 360 Lace Wig Raw Indian Hair <br>
@@ -306,7 +306,7 @@
         <div class="high-recommendation">
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/d1.jpg" alt="">
+                    <img src="/images/d1.jpg" alt="">
                 </div>
                 <h4>
                     99j Burgundy 13x6 Lace Front Human Hair <br>
@@ -321,7 +321,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/a2a.jpg" alt="">
+                    <img src="/images/a2a.jpg" alt="">
                 </div>
                 <h4>
                     Straight Human Hair Wigs With Bangs Natural <br>color 100% 
@@ -335,7 +335,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/b2.jpeg" alt="">
+                    <img src="/images/b2.jpeg" alt="">
                 </div>
                 <h4>
                     Glueless Bob Wigs Human Hair Wear And Go <br> Wig 
@@ -350,7 +350,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/h25.jpeg" alt="">
+                    <img src="/images/h25.jpeg" alt="">
                 </div>
                 <h4>
                     Brazilian Kinky Staright Transparent 13x4 Lace <br> 
@@ -371,7 +371,7 @@
         <div class="help">
            <div class="order">
                <div class="order-1">
-                   <img src="/my_hairlify/images/logo2.jpg" alt="">
+                   <img src="/images/logo2.jpg" alt="">
                    <div class="order-2">
                        <h3>
                            MyHairlify
