--- a/pages/plantinum.html
+++ b/pages/plantinum.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/my_hairlify/css/plantinum.css">
+    <link rel="stylesheet" href="/css/plantinum.css">
     <script
             src="https://kit.fontawesome.com/3bf6e17bc2.js"
             crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
      <header class="first">
         <div class="head">
             <div class="image">
-                <img src="/my_hairlify/images/logo2.jpg" alt="">
+                <img src="/images/logo2.jpg" alt="">
             </div>
             <div class="hairlify">
                 <h1>
@@ -77,7 +77,7 @@
         <div class="main-products">
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/b18.jpeg" alt="">
+                    <img src="/images/b18.jpeg" alt="">
                 </div>
                 <h4>
                     Curly Human Hair Wigs For Women <br> 180% 13x4 
@@ -93,7 +93,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/b19.jpeg" alt="">
+                    <img src="/images/b19.jpeg" alt="">
                 </div>
                 <h4>
                     Straight Orange Ginger Lace Front <br> Wig Human Hair 
@@ -107,7 +107,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/b12.jpeg" alt="">
+                    <img src="/images/b12.jpeg" alt="">
                 </div>
                 <h4>
                     Human Hair Blend HD Lace Front  <br>
@@ -121,7 +121,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/b20.jpeg" alt="">
+                    <img src="/images/b20.jpeg" alt="">
                 </div>
                 <h4>
                     Brazilian Remy Human Hair Wig With <br>Bangs Natural 
@@ -135,7 +135,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/b21.jpeg" alt="">
+                    <img src="/images/b21.jpeg" alt="">
                 </div>
                 <h4>
                     Femilon Pink Lace Front Brazilian Hair <br>
@@ -149,7 +149,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/b22.jpeg" alt="">
+                    <img src="/images/b22.jpeg" alt="">
                 </div>
                 <h4>
                     Yaki Kinky Straight Human Hair Glueless <br>Wigs 100% Human Hair Ready To <br>
@@ -163,7 +163,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/b23.jpeg" alt="">
+                    <img src="/images/b23.jpeg" alt="">
                 </div>
                 <h4>
                     360 Lace Front Wigs Human Hair Straight <br> Lace
@@ -179,7 +179,7 @@
         <div class="main-products">
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/b29.jpeg" alt="">
+                    <img src="/images/b29.jpeg" alt="">
                 </div>
                 <h4>
                     Sensationnel Butta Lace Human <br> Hair Blend
@@ -194,7 +194,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/b28.jpeg" alt="">
+                    <img src="/images/b28.jpeg" alt="">
                 </div>
                 <h4>
                     Straight Pre Cut Glueless Wig 100% <br> Human Hair 
@@ -208,7 +208,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/b7.jpeg" alt="">
+                    <img src="/images/b7.jpeg" alt="">
                 </div>
                 <h4>
                     180% Density Short Bob Jerry Curl Lace <br>
@@ -223,7 +223,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/b27.jpeg" alt="">
+                    <img src="/images/b27.jpeg" alt="">
                 </div>
                 <h4>
                     Synthetic Lace Front Wig 18 <br>Inch  HD Curly 
@@ -236,7 +236,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/b26.jpeg" alt="">
+                    <img src="/images/b26.jpeg" alt="">
                 </div>
                 <h4>
                     Synthetic Wigs Wear And Go Glueless <br> Human Hair Straight 
@@ -251,7 +251,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/b25.jpeg" alt="">
+                    <img src="/images/b25.jpeg" alt="">
                 </div>
                 <h4>
                     HD Transparent 360 Lace Front Wigs <br>
@@ -265,7 +265,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/b24.jpeg" alt="">
+                    <img src="/images/b24.jpeg" alt="">
                 </div>
                 <h4>
                     Wear And Go Curly Bob Human Hair 
@@ -293,7 +293,7 @@
          <div class="high-recommendation">
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/c2.jpeg" alt="">
+                    <img src="/images/c2.jpeg" alt="">
                 </div>
                 <h4>
                     HD 13X4 Lace Front Wig Glueless Lace Frontal <br>
@@ -308,7 +308,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/b2.jpeg" alt="">
+                    <img src="/images/b2.jpeg" alt="">
                 </div>
                 <h4>
                     Glueless Bob Wigs Human Hair Wear And <br>
@@ -323,7 +323,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/d2.jpg" alt="">
+                    <img src="/images/d2.jpg" alt="">
                 </div>
                 <h4>
                     Highlight Wig 100% Human <br>
@@ -339,7 +339,7 @@
          <div class="high-recommendation">
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/b4.jpeg" alt="">
+                    <img src="/images/b4.jpeg" alt="">
                 </div>
                 <h4>
                     Wear And Go Glueless Wigs Human Hair Kinky <br>
@@ -354,7 +354,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/c1.jpeg" alt="">
+                    <img src="/images/c1.jpeg" alt="">
                 </div>
                 <h4>
                     Kinky Curly 13x4 Lace Front Human Hair Wigs <br>
@@ -369,7 +369,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/b6.jpeg" alt="">
+                    <img src="/images/b6.jpeg" alt="">
                 </div>
                 <h4>
                     13x6 Lace Front Wigs Straight Virgin Human <br>
@@ -389,7 +389,7 @@
         <div class="help">
            <div class="order">
                <div class="order-1">
-                   <img src="/my_hairlify/images/logo2.jpg" alt="">
+                   <img src="/images/logo2.jpg" alt="">
                    <div class="order-2">
                        <h3>
                            MyHairlify
