--- a/pages/product-page.html
+++ b/pages/product-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/my_hairlify/css/plantinum.css">
+    <link rel="stylesheet" href="/css/plantinum.css">
     <script
             src="https://kit.fontawesome.com/3bf6e17bc2.js"
             crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
      <header class="first">
         <div class="head">
             <div class="image">
-                <img src="/my_hairlify/images/logo2.jpg" alt="">
+                <img src="/images/logo2.jpg" alt="">
             </div>
             <div class="hairlify">
                 <h1>
@@ -77,7 +77,7 @@
         <div class="main-products">
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h21.jpeg" alt="">
+                    <img src="/images/h21.jpeg" alt="">
                 </div>
                 <h4>
                     250% Density Body Wave Lace Front Wig <br>
@@ -92,7 +92,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h22.jpeg" alt="">
+                    <img src="/images/h22.jpeg" alt="">
                 </div>
                 <h4>
                     12 Inch Bob Wig Human Hair 13x4 Lace Front <br>Wigs
@@ -106,7 +106,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/b15.jpeg" alt="">
+                    <img src="/images/b15.jpeg" alt="">
                 </div>
                 <h4>
                     Yaki Straight Human Hair 360 Lace Frontal <br>
@@ -120,7 +120,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h23.jpeg" alt="">
+                    <img src="/images/h23.jpeg" alt="">
                 </div>
                 <h4>
                     Straight Human Hair Wig With Bangs Human <br>
@@ -134,7 +134,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h24.jpeg" alt="">
+                    <img src="/images/h24.jpeg" alt="">
                 </div>
                 <h4>
                     Black Wavy Curly Synthetic Lace <br>
@@ -148,7 +148,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h25.jpeg" alt="">
+                    <img src="/images/h25.jpeg" alt="">
                 </div>
                 <h4>
                     Brazilian Kinky Straight Transparent 13x4 <br> Lace Front Human Hair Wigs.
@@ -161,7 +161,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/a2.jpg" alt="">
+                    <img src="/images/a2.jpg" alt="">
                 </div>
                 <h4>
                     Bone Straight Double Drawn Human Hair Wig <br> 220% 
@@ -176,7 +176,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/d3.jpg" alt="">
+                    <img src="/images/d3.jpg" alt="">
                 </div>
                 <h4>
                     250% Density13x4 Orange Ginger Body Wave <br> Lace 
@@ -190,7 +190,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/a14.jpg" alt="">
+                    <img src="/images/a14.jpg" alt="">
                 </div>
                 <h4>
                     210% Density Vietname Double Drawn Human <br> Hair 
@@ -205,7 +205,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h19b.jpeg" alt="">
+                    <img src="/images/h19b.jpeg" alt="">
                 </div>
                 <h4>
                     Short Straight Bob Wig With Bangs Brazilian <br> Human 
@@ -219,7 +219,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/d1.jpg" alt="">
+                    <img src="/images/d1.jpg" alt="">
                 </div>
                 <h4>
                     99j Burgundy 13x6 Lace Front Human Hair <br>
@@ -236,7 +236,7 @@
         <div class="main-products">
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/c3.jpg" alt="">
+                    <img src="/images/c3.jpg" alt="">
                 </div>
                 <h4>
                     Bone Straight V Part Wigs After Wet Get  <br> Deep Curls
@@ -250,7 +250,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/b29.jpeg" alt="">
+                    <img src="/images/b29.jpeg" alt="">
                 </div>
                 <h4>
                     Human Hair Blend HD Front Wig- Volume Curl <br> 22- Balayagelatte.
@@ -263,7 +263,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h20b.jpeg" alt="">
+                    <img src="/images/h20b.jpeg" alt="">
                 </div>
                 <h4>
                     Ombre Brown Ginger Orange Wavy Colored Wig <br>
@@ -278,7 +278,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h7.jpeg" alt="">
+                    <img src="/images/h7.jpeg" alt="">
                 </div>
                 <h4>
                     5x5 Real HD Lace Closure Human Hair Straight <br>
@@ -291,7 +291,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h21b.jpeg" alt="">
+                    <img src="/images/h21b.jpeg" alt="">
                 </div>
                 <h4>
                     180% Density 4x4 Straight Bob Human Hair <br>
@@ -306,7 +306,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h22b.jpeg" alt="">
+                    <img src="/images/h22b.jpeg" alt="">
                 </div>
                 <h4>
                     360Full Lace Wig Human Hair Lace Frontal Wig <br>30-32 
@@ -320,7 +320,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h23b.jpeg" alt="">
+                    <img src="/images/h23b.jpeg" alt="">
                 </div>
                 <h4>
                     30 Inch Human Hair Wigs 13x6 Body Wave HD <br>Lace
@@ -334,7 +334,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h11b.jpeg" alt="">
+                    <img src="/images/h11b.jpeg" alt="">
                 </div>
                 <h4>
                     New Goddess Locs <br> Crochet Hair 20 Inch <br>
@@ -348,7 +348,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h24b.jpeg" alt="">
+                    <img src="/images/h24b.jpeg" alt="">
                 </div>
                 <h4>
                     Straight Lace Front Wigs <br>
@@ -362,7 +362,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/h25b.jpeg" alt="">
+                    <img src="/images/h25b.jpeg" alt="">
                 </div>
                 <h4>
                     Straight Lace Front Wigs Human Hair Pre <br>Plucked With Baby Hair Glueless 180% Density.
@@ -375,7 +375,7 @@
             </div>
             <div class="first-products">
                 <div class="middle-products">
-                    <img src="/my_hairlify/images/1.jpeg" alt="">
+                    <img src="/images/1.jpeg" alt="">
                 </div>
                 <h4>
                     Glueless Bob Wigs Human Hair Wear And <br> Go Wig Short Straight Lace <br>
@@ -402,7 +402,7 @@
          <div class="high-recommendation">
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/b1.jpeg" alt="">
+                    <img src="/images/b1.jpeg" alt="">
                 </div>
                 <h4>20 Inch Body Wave HD Lace Glueless Wigs <br>
                      Human Hair 5x5 Invissible Hd Lace Closure.
@@ -415,7 +415,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/b2.jpeg" alt="">
+                    <img src="/images/b2.jpeg" alt="">
                 </div>
                 <h4>
                     Glueless Bob Wigs Human Hair Wear And Go Wig <br>
@@ -430,7 +430,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/b3.jpeg" alt="">
+                    <img src="/images/b3.jpeg" alt="">
                 </div>
                 <h4>
                     Highlight Wig 100% Human Hair 13x4 40 Inch <br>
@@ -446,7 +446,7 @@
          <div class="high-recommendation">
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/b5.jpeg" alt="">
+                    <img src="/images/b5.jpeg" alt="">
                 </div>
                 <h4>
                     Thick Natural French Curl/ Loose Wave Braids <br>
@@ -460,7 +460,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/b4.jpeg" alt="">
+                    <img src="/images/b4.jpeg" alt="">
                 </div>
                 <h4>
                     Wear And Go Glueless Wigs Human Hair Kinky <br>
@@ -475,7 +475,7 @@
             </div>
             <div class="first-recommendation">
                 <div class="middle-recommendation">
-                    <img src="/my_hairlify/images/b6.jpeg" alt="">
+                    <img src="/images/b6.jpeg" alt="">
                 </div>
                 <h4>
                     13x6 Lace Front Wigs Straight Virgin Human Hair <br>
@@ -495,7 +495,7 @@
         <div class="help">
            <div class="order">
                <div class="order-1">
-                   <img src="/my_hairlify/images/logo2.jpg" alt="">
+                   <img src="/images/logo2.jpg" alt="">
                    <div class="order-2">
                        <h3>
                            MyHairlify
