corrected new codes

--- a/index.html
+++ b/index.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
-</head>
-<body>
-   <div class="home">
-     <div>
+  </head>
+  <body>
+    <div class="home">
+      <div>
         <h2>MyHairlify</h2>
-     </div>
-     <nav class="about">
+      </div>
+      <nav class="about">
         <!-- <a href="">Home</a> -->
-        <a href="./pages/about.html">About  Us</a>
+        <a href="./pages/about.html">About Us</a>
         <a href="./pages/Product.html">Products</a>
         <!-- <a href="" id="appointment">Book Appointment</a> -->
-     </nav>
-   </div>
-   <section class="launch">
-     <div class="first-launch">
+      </nav>
+    </div>
+    <section class="launch">
+      <div class="first-launch">
         <h3>We are coming soon.....</h3>
         <pre>A brand for beautiful and high <br>quality hairs</pre>
-        <p>we will notify you when we <br> launch</p>
+        <p>
+          we will notify you when we <br />
+          launch
+        </p>
         <div class="first">
-            <input type="text" placeholder="Enter your email address">
-            <button>Submit</button>
+          <input type="text" placeholder="Enter your email address" />
+          <button>Submit</button>
         </div>
-     </div>
-     <div class="second-launch">
-        <img src="./images/gfgfgfhhjhjbh-removebg-preview (1).png" alt="">
-     </div>
-   </section>
-</body>
+      </div>
+      <div class="second-launch">
+        <img src="./images/gfgfgfhhjhjbh-removebg-preview (1).png" alt="" />
+      </div>
+    </section>
+  </body>
 </html>
