--- a/pages/signup.html
+++ b/pages/signup.html
@@ -36,7 +36,7 @@
             </div>
         </div>
         <div class="second">
-            <img src="/images/lock.png" alt="">
+            <img src="/my_hairlify/images/lock.png" alt="">
         </div>
     </div>
 </body>
