minor changes occured

--- a/pages/home.html
+++ b/pages/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/my_hairlify/css//home.css">
+    <link rel="stylesheet" href="/css/home.css">
     <scr
       src="https://kit.fontawesome.com/3bf6e17bc2.js"
       crossorigin="anonymous"
@@ -15,7 +15,7 @@
    <header class="first">
     <div class="head">
         <div class="image">
-            <img src="/my_hairlify/images/Logooo.jpeg" alt="">
+            <img src="/images/Logooo.jpeg" alt="">
         </div>
         <div class="hairlify">
             <h1>
@@ -56,7 +56,7 @@
         <button id="btn">Shop Now</button>
     </div>
     <div class="second-high">
-        <img src="/my_hairlify/images/c1d0571cd871b44010e6ea9b4f2393c1.png" alt="A boss">
+        <img src="/images/c1d0571cd871b44010e6ea9b4f2393c1.png" alt="A boss">
     </div>
    </section>
    <!-- fast shipping -->
@@ -96,7 +96,7 @@
         </div>
         <div class="brand">
             <div class="brand-img">
-                <img src="/my_hairlify/images/first.jpg" alt="A lady">
+                <img src="/images/first.jpg" alt="A lady">
             </div>
             <div class="brand-1">
                 <h4>A Trusted Brand For Your
@@ -124,7 +124,7 @@
         </div>
         <div class="category-1">
             <div class="img-1">
-                <img src="/my_hairlify/images/A.jpg" alt="">
+                <img src="/images/A.jpg" alt="">
                 <p>
                     Exclusive 
                     <br>
@@ -132,7 +132,7 @@
                 </p>
             </div>
             <div class="img-1">
-                <img src="/my_hairlify/images/b.jpg" alt="">
+                <img src="/images/b.jpg" alt="">
                 <p>
                     Platinum
                     <br>
@@ -140,7 +140,7 @@
                 </p>
             </div>
             <div class="img-1">
-                <img src="/my_hairlify/images/c.jpg" alt="">
+                <img src="/images/c.jpg" alt="">
                 <p>
                     Gold
                     <br>
@@ -148,7 +148,7 @@
                 </p>
             </div>
             <div class="img-1">
-                <img src="/my_hairlify/images/d.jpg" alt="">
+                <img src="/images/d.jpg" alt="">
                 <p>
                   Silver
                     <br>
@@ -175,7 +175,7 @@
             <div class="services">
                 <div class="practice">
                     <div class="img-2">
-                        <img src="/my_hairlify/images/b6.jpeg" alt="">
+                        <img src="/images/b6.jpeg" alt="">
                         <h5>
                             13x6 Lace Front Wigs Straight Virgin Human 
                             <br>
@@ -194,7 +194,7 @@
                 </div>
                 <div class="practice">
                     <div class="img-2">
-                        <img src="/my_hairlify/images/a2a.jpg" alt="">
+                        <img src="/images/a2a.jpg" alt="">
                         <h5>
                             Straight Human Hair Wigs With Bangs Natural 
                             <br>
@@ -213,7 +213,7 @@
                 </div>
                 <div class="practice">
                     <div class="img-2">
-                        <img src="/my_hairlify/images/a3.jpg" alt="">
+                        <img src="/images/a3.jpg" alt="">
                         <h5>
                             250% Density 30-40 Inch 99J Burgundy Body <br>Wave 13x4 HD Transparent Lace Frontal Wig <br>Human Hair.
                         </h5>
@@ -232,7 +232,7 @@
             <div class="services">
                 <div class="practice">
                     <div class="img-2">
-                        <img src="/my_hairlify/images/b1.jpg" alt="">
+                        <img src="/images/b1.jpg" alt="">
                         <h5>
                             100% Vietnam Brazilian 13x4 HD Lace <br> Frontal Human Hair Wigs 13x6 Body Wave Lace. 
                         </h5>
@@ -249,7 +249,7 @@
                 </div>
                 <div class="practice">
                     <div class="img-2">
-                        <img src="/my_hairlify/images/b22b.jpg" id="picture"   alt="">
+                        <img src="/images/b22b.jpg" id="picture"   alt="">
                         <h5>
                             2x6 Lace Closure Human Hair Middle Part <br> Straight Transparent Lace Clos
                         </h5>
@@ -266,7 +266,7 @@
                 </div>
                 <div class="practice">
                     <div class="img-2">
-                        <img src="/my_hairlify/images/b3.jpg" alt="">
+                        <img src="/images/b3.jpg" alt="">
                         <h5 id="picture-2">
                             Thick Natural French Curl/ Loose Wave Braids
                             <br>
@@ -284,7 +284,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="" id="arrow"> view more <i class="bi bi-arrow-right"></i></a>
+                <a href="product-page.html" id="arrow"> view more <i class="bi bi-arrow-right"></i></a>
             </div>
         </div>
     </section>
@@ -307,7 +307,7 @@
             <div class="first-container">
                 <div class="container">
                     <div class="img-3">
-                        <img src="/my_hairlify/images/c1.jpg" alt="">
+                        <img src="/images/c1.jpg" alt="">
                     </div>
                     <div class="img-4">
                         <h5>
@@ -323,7 +323,7 @@
                 </div>
                 <div class="container">
                     <div class="img-3">
-                        <img src="/my_hairlify/images/c2.jpg" alt="">
+                        <img src="/images/c2.jpg" alt="">
                     </div>
                     <div class="img-4">
                         <h5>
@@ -339,7 +339,7 @@
                 </div>
                 <div class="container">
                     <div class="img-3">
-                        <img src="/my_hairlify/images/c3.jpg" alt="">
+                        <img src="/images/c3.jpg" alt="">
                     </div>
                     <div class="img-4">
                         <h5>
@@ -358,7 +358,7 @@
             <div class="first-container">
                 <div class="container" id="contain-2">
                     <div class="img-3">
-                        <img src="/my_hairlify/images/d1.jpg" alt="">
+                        <img src="/images/d1.jpg" alt="">
                     </div>
                     <div class="img-4">
                         <h5>
@@ -374,7 +374,7 @@
                 </div>
                 <div class="container" id="contain-1">
                     <div class="img-3">
-                        <img src="/my_hairlify/images/d2.jpg" alt="">
+                        <img src="/images/d2.jpg" alt="">
                     </div>
                     <div class="img-4">
                         <h5>
@@ -390,7 +390,7 @@
                 <div class="container" id="contain">
             
                     <div class="img-3">
-                        <img src="/my_hairlify/images/d3.jpg" alt="">
+                        <img src="/images/d3.jpg" alt="">
                     </div>
                      
                     <div class="img-4">
@@ -405,7 +405,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="" id="arrow"> view more <i class="bi bi-arrow-right"></i></a>
+                <a href="Product.html" id="arrow"> view more <i class="bi bi-arrow-right"></i></a>
             </div>
         </div>
     </section>
@@ -427,7 +427,7 @@
             <div class="first-customer">
                 <div class="client-2">
                     <div class="img">
-                        <img src="/my_hairlify/images/E1.jpg" alt="">
+                        <img src="/images/E1.jpg" alt="">
                     </div>
                     <div class="testimony">
                         <h4>
@@ -451,7 +451,7 @@
             <div class="first-customer">
                 <div class="client-2">
                     <div class="img">
-                        <img src="/my_hairlify/images/E2.jpg" alt="">
+                        <img src="/images/E2.jpg" alt="">
                     </div>
                     <div class="testimony">
                         <h4>
@@ -475,7 +475,7 @@
             <div class="first-customer">
                 <div class="client-2">
                     <div class="img">
-                        <img src="/my_hairlify/images/E3.jpg" alt="">
+                        <img src="/images/E3.jpg" alt="">
                     </div>
                    <div class="testimony">
                       <h4>
@@ -566,7 +566,7 @@
         <div class="help">
            <div class="order">
                <div class="order-1">
-                   <img src="/my_hairlify/images/logo2.jpg" alt="">
+                   <img src="/images/logo2.jpg" alt="">
                    <div class="order-2">
                        <h3>
                            MyHairlify
