--- a/pages/signup.html
+++ b/pages/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/my_hairlify/css/signup.css">
+    <link rel="stylesheet" href="/css/signup.css">
     <title>Signup</title>
 </head>
 <body>
@@ -36,7 +36,7 @@
             </div>
         </div>
         <div class="second">
-            <img src="/my_hairlify/images/lock.png" alt="">
+            <img src="/images/lock.png" alt="">
         </div>
     </div>
 </body>
